<package format="3">
  <name>arbotix</name>
  <version>0.11.0</version>
  <description>ArbotiX Drivers</description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>arbotix_msgs</exec_depend>
  <exec_depend>arbotix_python</exec_depend>
  <exec_depend>arbotix_sensors</exec_depend>
  <exec_depend>arbotix_controllers</exec_depend>
  <exec_depend>arbotix_firmware</exec_depend>

</package>


