<package format="3">
  <name>arbotix_controllers</name>
  <version>0.11.0</version>
  <description>
    Extends the arbotix_python package with a number of more sophisticated ROS wrappers for common devices.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix_controllers</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>arbotix_python</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
