<package format="3">
  <name>arbotix_sensors</name>
  <version>0.11.0</version>
  <description>
    Extends the arbotix_node package with a number of more sophisticated ROS wrappers for common devices. 
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix_sensors</url>
  
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>arbotix_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
